--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -12,6 +12,7 @@
 
     @include u.breakpoint-up(desktop) {
         background-image: url('../../images/desktop/image-header.jpg');
+        height: calc(100vh - u.rem(90));
     }
 
     &__content {
